--- a/README
+++ b/README
@@ -8,8 +8,13 @@ more info soon
 
 New Features List:
 
-    -Wysiwyg Editor when creating new Post content using extension <a href="http://www.yiiframework.com/extension/xheditor-widget/">xheditor-widget</a>
+    -Wysiwyg Editor when creating new Post content using extension xheditor-widget (http://www.yiiframework.com/extension/xheditor-widget)
 
 Upcoming Features List:
 
+    soon
+
+
+Demo
+   
     soon
